--- a/Wine project practice.ipynb
+++ b/Wine project practice.ipynb
@@ -2003,6 +2003,35 @@
    "source": [
     "Redwine['fixed acidity'].plot(kind = 'box')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Winedata' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[81], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# quality_bins = [0, 6, 7, 10]  # Adjust these bins as needed\u001b[39;00m\n\u001b[0;32m      2\u001b[0m quality_labels \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlow\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmedium\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhigh\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m Winedata[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mquality_bin\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mcut(\u001b[43mWinedata\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mquality\u001b[39m\u001b[38;5;124m'\u001b[39m], bins\u001b[38;5;241m=\u001b[39mquality_bins, labels\u001b[38;5;241m=\u001b[39mquality_labels)\n\u001b[0;32m      4\u001b[0m sns\u001b[38;5;241m.\u001b[39mscatterplot(x\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124malcohol\u001b[39m\u001b[38;5;124m'\u001b[39m, y\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msulphates\u001b[39m\u001b[38;5;124m'\u001b[39m, hue\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mquality_bin\u001b[39m\u001b[38;5;124m'\u001b[39m, data\u001b[38;5;241m=\u001b[39mwine_data, palette\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgold\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124morange\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnavy\u001b[39m\u001b[38;5;124m'\u001b[39m], alpha\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m)\n\u001b[0;32m      5\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRed Wines - Sulphates, Alcohol and Quality\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Winedata' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# quality_bins = [0, 6, 7, 10]  # Adjust these bins as needed\n",
+    "quality_labels = ['low', 'medium', 'high']\n",
+    "Winedata['quality_bin'] = pd.cut(Winedata['quality'], bins=quality_bins, labels=quality_labels)\n",
+    "sns.scatterplot(x='alcohol', y='sulphates', hue='quality_bin', data=wine_data, palette=['gold', 'orange', 'navy'], alpha=0.5)\n",
+    "plt.title('Red Wines - Sulphates, Alcohol and Quality')\n",
+    "plt.legend(title='Quality')\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
