--- a/ML practice.ipynb
+++ b/ML practice.ipynb
@@ -9,7 +9,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "Redwine = pd.read_csv(\"winequality-red.csv\", delimiter=';')\n",
+    "Whitewine = pd.read_csv(\"winequality-white.csv\", delimiter=';')"
    ]
   }
  ],
