--- a/Winedata EDA.ipynb
+++ b/Winedata EDA.ipynb
@@ -1278,16 +1278,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=47)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,13 +1298,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-23 {\n",
+       "<style>#sk-container-id-24 {\n",
        "  /* Definition of color scheme common for light and dark mode */\n",
        "  --sklearn-color-text: #000;\n",
        "  --sklearn-color-text-muted: #666;\n",
@@ -1335,15 +1335,15 @@
        "  }\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 {\n",
+       "#sk-container-id-24 {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 pre {\n",
+       "#sk-container-id-24 pre {\n",
        "  padding: 0;\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 input.sk-hidden--visually {\n",
+       "#sk-container-id-24 input.sk-hidden--visually {\n",
        "  border: 0;\n",
        "  clip: rect(1px 1px 1px 1px);\n",
        "  clip: rect(1px, 1px, 1px, 1px);\n",
@@ -1355,7 +1355,7 @@
        "  width: 1px;\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-dashed-wrapped {\n",
+       "#sk-container-id-24 div.sk-dashed-wrapped {\n",
        "  border: 1px dashed var(--sklearn-color-line);\n",
        "  margin: 0 0.4em 0.5em 0.4em;\n",
        "  box-sizing: border-box;\n",
@@ -1363,7 +1363,7 @@
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-container {\n",
+       "#sk-container-id-24 div.sk-container {\n",
        "  /* jupyter's `normalize.less` sets `[hidden] { display: none; }`\n",
        "     but bootstrap.min.css set `[hidden] { display: none !important; }`\n",
        "     so we also need the `!important` here to be able to override the\n",
@@ -1373,7 +1373,7 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-text-repr-fallback {\n",
+       "#sk-container-id-24 div.sk-text-repr-fallback {\n",
        "  display: none;\n",
        "}\n",
        "\n",
@@ -1389,14 +1389,14 @@
        "\n",
        "/* Parallel-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-23 div.sk-parallel-item::after {\n",
+       "#sk-container-id-24 div.sk-parallel-item::after {\n",
        "  content: \"\";\n",
        "  width: 100%;\n",
        "  border-bottom: 2px solid var(--sklearn-color-text-on-default-background);\n",
        "  flex-grow: 1;\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-parallel {\n",
+       "#sk-container-id-24 div.sk-parallel {\n",
        "  display: flex;\n",
        "  align-items: stretch;\n",
        "  justify-content: center;\n",
@@ -1404,28 +1404,28 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-parallel-item {\n",
+       "#sk-container-id-24 div.sk-parallel-item {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-parallel-item:first-child::after {\n",
+       "#sk-container-id-24 div.sk-parallel-item:first-child::after {\n",
        "  align-self: flex-end;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-parallel-item:last-child::after {\n",
+       "#sk-container-id-24 div.sk-parallel-item:last-child::after {\n",
        "  align-self: flex-start;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-parallel-item:only-child::after {\n",
+       "#sk-container-id-24 div.sk-parallel-item:only-child::after {\n",
        "  width: 0;\n",
        "}\n",
        "\n",
        "/* Serial-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-23 div.sk-serial {\n",
+       "#sk-container-id-24 div.sk-serial {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "  align-items: center;\n",
@@ -1443,14 +1443,14 @@
        "\n",
        "/* Pipeline and ColumnTransformer style (default) */\n",
        "\n",
-       "#sk-container-id-23 div.sk-toggleable {\n",
+       "#sk-container-id-24 div.sk-toggleable {\n",
        "  /* Default theme specific background. It is overwritten whether we have a\n",
        "  specific estimator or a Pipeline/ColumnTransformer */\n",
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
        "/* Toggleable label */\n",
-       "#sk-container-id-23 label.sk-toggleable__label {\n",
+       "#sk-container-id-24 label.sk-toggleable__label {\n",
        "  cursor: pointer;\n",
        "  display: flex;\n",
        "  width: 100%;\n",
@@ -1463,13 +1463,13 @@
        "  gap: 0.5em;\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 label.sk-toggleable__label .caption {\n",
+       "#sk-container-id-24 label.sk-toggleable__label .caption {\n",
        "  font-size: 0.6rem;\n",
        "  font-weight: lighter;\n",
        "  color: var(--sklearn-color-text-muted);\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-24 label.sk-toggleable__label-arrow:before {\n",
        "  /* Arrow on the left of the label */\n",
        "  content: \"▸\";\n",
        "  float: left;\n",
@@ -1477,13 +1477,13 @@
        "  color: var(--sklearn-color-icon);\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 label.sk-toggleable__label-arrow:hover:before {\n",
+       "#sk-container-id-24 label.sk-toggleable__label-arrow:hover:before {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
        "/* Toggleable content - dropdown */\n",
        "\n",
-       "#sk-container-id-23 div.sk-toggleable__content {\n",
+       "#sk-container-id-24 div.sk-toggleable__content {\n",
        "  max-height: 0;\n",
        "  max-width: 0;\n",
        "  overflow: hidden;\n",
@@ -1492,12 +1492,12 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-toggleable__content.fitted {\n",
+       "#sk-container-id-24 div.sk-toggleable__content.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-toggleable__content pre {\n",
+       "#sk-container-id-24 div.sk-toggleable__content pre {\n",
        "  margin: 0.2em;\n",
        "  border-radius: 0.25em;\n",
        "  color: var(--sklearn-color-text);\n",
@@ -1505,79 +1505,79 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-toggleable__content.fitted pre {\n",
+       "#sk-container-id-24 div.sk-toggleable__content.fitted pre {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
+       "#sk-container-id-24 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
        "  /* Expand drop-down */\n",
        "  max-height: 200px;\n",
        "  max-width: 100%;\n",
        "  overflow: auto;\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-24 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
        "  content: \"▾\";\n",
        "}\n",
        "\n",
        "/* Pipeline/ColumnTransformer-specific style */\n",
        "\n",
-       "#sk-container-id-23 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-24 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-24 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator-specific style */\n",
        "\n",
        "/* Colorize estimator box */\n",
-       "#sk-container-id-23 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-24 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-24 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-label label.sk-toggleable__label,\n",
-       "#sk-container-id-23 div.sk-label label {\n",
+       "#sk-container-id-24 div.sk-label label.sk-toggleable__label,\n",
+       "#sk-container-id-24 div.sk-label label {\n",
        "  /* The background is the default theme color */\n",
        "  color: var(--sklearn-color-text-on-default-background);\n",
        "}\n",
        "\n",
        "/* On hover, darken the color of the background */\n",
-       "#sk-container-id-23 div.sk-label:hover label.sk-toggleable__label {\n",
+       "#sk-container-id-24 div.sk-label:hover label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
        "/* Label box, darken color on hover, fitted */\n",
-       "#sk-container-id-23 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
+       "#sk-container-id-24 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator label */\n",
        "\n",
-       "#sk-container-id-23 div.sk-label label {\n",
+       "#sk-container-id-24 div.sk-label label {\n",
        "  font-family: monospace;\n",
        "  font-weight: bold;\n",
        "  display: inline-block;\n",
        "  line-height: 1.2em;\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-label-container {\n",
+       "#sk-container-id-24 div.sk-label-container {\n",
        "  text-align: center;\n",
        "}\n",
        "\n",
        "/* Estimator-specific */\n",
-       "#sk-container-id-23 div.sk-estimator {\n",
+       "#sk-container-id-24 div.sk-estimator {\n",
        "  font-family: monospace;\n",
        "  border: 1px dotted var(--sklearn-color-border-box);\n",
        "  border-radius: 0.25em;\n",
@@ -1587,18 +1587,18 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-estimator.fitted {\n",
+       "#sk-container-id-24 div.sk-estimator.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
        "/* on hover */\n",
-       "#sk-container-id-23 div.sk-estimator:hover {\n",
+       "#sk-container-id-24 div.sk-estimator:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 div.sk-estimator.fitted:hover {\n",
+       "#sk-container-id-24 div.sk-estimator.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
@@ -1686,7 +1686,7 @@
        "\n",
        "/* \"?\"-specific style due to the `<a>` HTML tag */\n",
        "\n",
-       "#sk-container-id-23 a.estimator_doc_link {\n",
+       "#sk-container-id-24 a.estimator_doc_link {\n",
        "  float: right;\n",
        "  font-size: 1rem;\n",
        "  line-height: 1em;\n",
@@ -1701,31 +1701,31 @@
        "  border: var(--sklearn-color-unfitted-level-1) 1pt solid;\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 a.estimator_doc_link.fitted {\n",
+       "#sk-container-id-24 a.estimator_doc_link.fitted {\n",
        "  /* fitted */\n",
        "  border: var(--sklearn-color-fitted-level-1) 1pt solid;\n",
        "  color: var(--sklearn-color-fitted-level-1);\n",
        "}\n",
        "\n",
        "/* On hover */\n",
-       "#sk-container-id-23 a.estimator_doc_link:hover {\n",
+       "#sk-container-id-24 a.estimator_doc_link:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-3);\n",
        "  color: var(--sklearn-color-background);\n",
        "  text-decoration: none;\n",
        "}\n",
        "\n",
-       "#sk-container-id-23 a.estimator_doc_link.fitted:hover {\n",
+       "#sk-container-id-24 a.estimator_doc_link.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-23\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(max_iter=1000)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-23\" type=\"checkbox\" checked><label for=\"sk-estimator-id-23\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>LogisticRegression</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(max_iter=1000)</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-24\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(max_iter=1000)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-24\" type=\"checkbox\" checked><label for=\"sk-estimator-id-24\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>LogisticRegression</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(max_iter=1000)</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
        "LogisticRegression(max_iter=1000)"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1736,17 +1736,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['white', 'white', 'white', ..., 'red', 'white', 'white'],\n",
+       "array(['white', 'white', 'white', ..., 'white', 'white', 'white'],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1758,27 +1758,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3153    white\n",
-       "2935    white\n",
-       "4583    white\n",
-       "3625    white\n",
-       "965       red\n",
+       "1504    white\n",
+       "1419      red\n",
+       "3162    white\n",
+       "3091    white\n",
+       "2433    white\n",
        "        ...  \n",
-       "1414    white\n",
-       "2212    white\n",
-       "638       red\n",
-       "1298    white\n",
-       "2678    white\n",
+       "889       red\n",
+       "1251    white\n",
+       "3318    white\n",
+       "3599    white\n",
+       "4044    white\n",
        "Name: type, Length: 1300, dtype: object"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1789,16 +1789,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9869230769230769"
+       "0.9792307692307692"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
